# my-project

./: README.md  bootstrap_ml_project.sh  pyproject.toml  requirements.txt  setup.py  working0820_trial02.ipynb
data/processed/: train_features.csv
kaggle_clean.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: 01_eda.ipynb
scripts/: evaluate.py  make_processed.py  predict.py  train.py
service/: modular_model.py
src/: __init__.py  config.py  paths.py
src/data/: __init__.py  io.py  preprocess.py  split.py
src/evaluation/: error_eda.py  report.py
src/features/: __init__.py  build.py
src/kaggle_clean.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/modeling/: inference.py  metrics.py  params.py  pipelines.py  search.py  threshold.py
